--- a/freshmenu/package.json
+++ b/freshmenu/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "woodenart",
+  "name": "freshmenu",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,13 +8,15 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "set PORT=4200 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,4 +39,4 @@
       "last 1 safari version"
     ]
   }
-}                       
+}
